--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,6 +18,7 @@
         {{ pizza.desc}}
       </p>
       <span style="float: right; color: blue">{{pizza.price}}€</span>
+      <button ion-button color="secondary" clear (click)="modifpage(pizzaview)">Modifier</button>
     </ion-card-content>
   </ion-card>
 </ion-content>
