--- a/src/pages/ajout/ajout.html
+++ b/src/pages/ajout/ajout.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar color="dark">
-    <ion-title>Ajout</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>PIZZA VELLA - AJOUT</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
