--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,6 +10,9 @@
 
 <ion-content padding class="pizzatheme">
   <h3 class="title-carte">Découvrez notre carte</h3>
+  <div class="w3-light-grey w3-round">
+    <div class="w3-container w3-red w3-round" style="width:25%">25%</div>
+  </div>
   <ion-card *ngFor="let pizzaview of mypizza">
     <div class="position">
       <span class="bdo-custom">{{ pizzaview.price}}€</span>
@@ -26,6 +29,7 @@
       <button ion-button color="dark" (click)="modifpage(pizzaview)">Modifier</button>
       <button ion-button color="dark" (click)="delete(pizzaview)">Supprimer</button>
       <button ion-button color="danger" (click)="panier(pizzaview)">Ajouter au panier</button>
+      <button ion-button color="danger" (click)="detail(pizzaview)">Voir le détail</button>
     </ion-card-content>
   </ion-card>
 </ion-content>
