--- a/src/pages/ajout/ajout.html
+++ b/src/pages/ajout/ajout.html
@@ -19,17 +19,17 @@
 
   <ion-item>
     <ion-label fixed>Prix</ion-label>
-    <ion-input type="number" [(ngModel)]="pizzaadd.prix"></ion-input>
+    <ion-input type="number" [(ngModel)]="pizzaadd.prix" required></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label fixed>Nom de la pizza</ion-label>
-    <ion-input type="text" [(ngModel)]="pizzaadd.nom"></ion-input>
+    <ion-input type="text" [(ngModel)]="pizzaadd.nom" required></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label fixed>Description de la pizza</ion-label>
-    <ion-input type="text" [(ngModel)]="pizzaadd.desc"></ion-input>
+    <ion-input type="text" [(ngModel)]="pizzaadd.desc" required></ion-input>
   </ion-item>
 
 </ion-list>
